Adjusting database migration file load to work in production builds.